my first commit Recipe

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://sathvikshetty-MCA.github.io/recipe",
+  "homepage": "https://sathvikshetty-MCA.github.io/Recipe",
   "name": "recipe",
   "version": "0.1.0",
   "private": true,
